ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: logtext
          persistentVolumeClaim:
            claimName: log-claim
      containers:
        - name: ping-pong
          image: usmanusman/pingpong:v5
          volumeMounts:
            - name: logtext
              mountPath: /usr/src/app/files
